force-app/main/default/objects/Revisiones__c/Revisiones__c.object-meta.xml
<CustomObject>
    <label>Revisiones</label>
    <nameField>
        <displayFormat>Rev-{00000}</displayFormat>
        <label>IdRev</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisiones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>