force-app/main/default/objects/Revisiones__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidato titular de la revisión</description>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Revisiones</relationshipLabel>
    <relationshipName>Candidato</relationshipName>
    <type>Lookup</type>
</CustomField>