force-app/main/default/objects/Revisiones__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Cuenta titular de la revisión</description>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revisiones</relationshipLabel>
    <relationshipName>Revisiones</relationshipName>
    <type>Lookup</type>
</CustomField>