force-app/main/default/objects/Revisiones__c/fields/Colegio__c.field-meta.xml
<CustomField>
    <fullName>Colegio__c</fullName>
    <label>Colegio del Notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>