force-app/main/default/objects/Revisiones__c/fields/Deuda_cedida__c.field-meta.xml
<CustomField>
    <fullName>Deuda_cedida__c</fullName>
    <label>Deuda cedida a alguna otra entidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiNo</valueSetName>
    </valueSet>
</CustomField>