force-app/main/default/objects/Revisiones__c/fields/Entidad__c.field-meta.xml
<CustomField>
    <fullName>Entidad__c</fullName>
    <description>Entidad relacionada con la Revision</description>
    <label>Entidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;G/A&amp;G</fullName>
                <label>A&amp;G / A&amp;G</label>
            </value>
            <value>
                <fullName>ABANCA/EVO</fullName>
                <label>ABANCA / EVO</label>
            </value>
            <value>
                <fullName>BANCA MARCH/BANCA MARCH</fullName>
                <label>BANCA MARCH / BANCA MARCH</label>
            </value>
            <value>
                <fullName>BANESTO/SANTANDER</fullName>
                <label>BANESTO / SANTANDER</label>
            </value>
            <value>
                <fullName>BANKIA/CAIXABANK</fullName>
                <label>BANKIA / CAIXABANK</label>
            </value>
            <value>
                <fullName>BBVA/BBVA</fullName>
                <label>BBVA / BBVA</label>
            </value>
            <value>
                <fullName>BMN/CAIXABANK</fullName>
                <label>BMN / CAIXABANK</label>
            </value>
            <value>
                <fullName>CAIXABANK/CAIXABANK</fullName>
                <label>CAIXABANK / CAIXABANK</label>
            </value>
            <value>
                <fullName>CAJAESPAÑA/UNICAJA</fullName>
                <label>CAJAESPAÑA / UNICAJA</label>
            </value>
            <value>
                <fullName>CAJADUERO/UNICAJA</fullName>
                <label>CAJADUERO / UNICAJA</label>
            </value>
            <value>
                <fullName>CAJAMAR/CAJAMAR CAJA RURAL</fullName>
                <label>CAJAMAR / CAJAMAR CAJA RURAL</label>
            </value>
            <value>
                <fullName>CATALUNYA CAIXA/BBVA</fullName>
                <label>CATALUNYA CAIXA / BBVA</label>
            </value>
            <value>
                <fullName>DEUTSCHE BANK/DEUTSCHE BANK</fullName>
                <label>DEUTSCHE BANK / DEUTSCHE BANK</label>
            </value>
            <value>
                <fullName>EVO/EVO</fullName>
                <label>EVO / EVO</label>
            </value>
            <value>
                <fullName>IBERCAJA/IBERCAJA</fullName>
                <label>IBERCAJA / IBERCAJA</label>
            </value>
            <value>
                <fullName>KUTXABANK/KUTXABANK</fullName>
                <label>KUTXABANK / KUTXABANK</label>
            </value>
            <value>
                <fullName>LABORAL KUTXA/LABORAL KUTXA</fullName>
                <label>LABORAL KUTXA / LABORAL KUTXA</label>
            </value>
            <value>
                <fullName>PASTOR/SANTANDER</fullName>
                <label>PASTOR / SANTANDER</label>
            </value>
            <value>
                <fullName>POPULAR/SANTANDER</fullName>
                <label>POPULAR / SANTANDER</label>
            </value>
            <value>
                <fullName>SANTANDER/SANTANDER</fullName>
                <label>SANTANDER / SANTANDER</label>
            </value>
            <value>
                <fullName>UCI/UCI</fullName>
                <label>UCI / UCI</label>
            </value>
            <value>
                <fullName>UNICAJA/UNICAJA</fullName>
                <label>UNICAJA / UNICAJA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>