force-app/main/default/objects/Revisiones__c/fields/Entidad_Actual__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Actual__c</fullName>
    <formula>RIGHT(TEXT(Entidad__c),LEN(TEXT(Entidad__c))-FIND(&quot;/&quot;,TEXT(Entidad__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entidad_Actual</label>
    <type>Text</type>
</CustomField>