force-app/main/default/objects/Revisiones__c/fields/Entidad_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Entidad_Anterior__c</fullName>
    <formula>LEFT(TEXT(Entidad__c),FIND(&quot;/&quot;,TEXT(Entidad__c))-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entidad_Anterior</label>
    <type>Text</type>
</CustomField>