force-app/main/default/objects/Revisiones__c/fields/Fecha_firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma__c</fullName>
    <label>Fecha de firma</label>
    <type>Date</type>
</CustomField>