force-app/main/default/objects/Revisiones__c/fields/Finalidad__c.field-meta.xml
<CustomField>
    <fullName>Finalidad__c</fullName>
    <label>Finalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Prest. Negocio</fullName>
            </value>
            <value>
                <fullName>Prest. Refinanciación deudas negocio</fullName>
            </value>
            <value>
                <fullName>Prest. Refinanciación deudas vivienda habitual</fullName>
            </value>
            <value>
                <fullName>Prest. Segunda residencia</fullName>
            </value>
            <value>
                <fullName>Prest. Vivienda habitual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>