force-app/main/default/objects/Revisiones__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <label>Nombre del Notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>