force-app/main/default/objects/Revisiones__c/fields/Otros__c.field-meta.xml
<CustomField>
    <fullName>Otros__c</fullName>
    <label>Otros</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>