force-app/main/default/objects/Revisiones__c/fields/Pactos_Novatorios__c.field-meta.xml
<CustomField>
    <fullName>Pactos_Novatorios__c</fullName>
    <label>Pactos Novatorios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SiNo</valueSetName>
    </valueSet>
</CustomField>