force-app/main/default/objects/Revisiones__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revisamos tu Hipoteca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>