force-app/main/default/objects/Revisiones__c/fields/ProductoOpo__c.field-meta.xml
<CustomField>
    <fullName>ProductoOpo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Oportunidad</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Revisiones</relationshipLabel>
    <relationshipName>ProductosOpo</relationshipName>
    <type>Lookup</type>
</CustomField>