force-app/main/default/objects/Revisiones__c/fields/Protocolo__c.field-meta.xml
<CustomField>
    <fullName>Protocolo__c</fullName>
    <label>Nº de protocolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>