force-app/main/default/objects/Revisiones__c/fields/Titulo_escritura__c.field-meta.xml
<CustomField>
    <fullName>Titulo_escritura__c</fullName>
    <label>Título de la escritura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>