force-app/main/default/objects/Revisiones__c/recordTypes/HIPOTECA.recordType-meta.xml
<RecordType>
    <fullName>HIPOTECA</fullName>
    <active>true</active>
    <label>HIPOTECA</label>
</RecordType>