force-app/main/default/objects/Revisiones__c/validationRules/Cliente_y_Candidato.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_y_Candidato</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(ISBLANK(Candidato__c),ISBLANK(Cliente__c))</errorConditionFormula>
    <errorMessage>Debe vincular la Revisión a un Cliente o Candidato</errorMessage>
</ValidationRule>