force-app/main/default/objects/Revisiones__c/validationRules/Valor_Otros.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_Otros</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Finalidad__c,&quot;Otros&quot;),ISBLANK(Otros__c) )</errorConditionFormula>
    <errorMessage>Se debe informar el campo Otros</errorMessage>
</ValidationRule>