force-app/main/default/objects/Revisiones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Candidato__c</columns>
    <columns>Entidad__c</columns>
    <columns>Producto__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>